syntax = "proto3";
package user;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ParseBearerToken(ParseBearerTokenRequest) returns (ParseBearerTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message ParseBearerTokenRequest {
  string accessToken = 1;
  string refreshToken = 2;
}

message ParseBearerTokenResponse {
  string sub = 1;
}

service UserService {
  rpc SignUp(SingUpRequest) returns (SingUpResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string email = 2;
  string username = 3;
}

message SingUpRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message SingUpResponse {
  int32 id = 1;
}
